<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.trindade.androidbasics.ui.SavingFilesActivity">

    <Button
        android:id="@+id/internal_private"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_internal_private"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/external"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_external"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/external_removable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_external_removable"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/move_cache_other_folder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_rename_move_cache"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
